# evd1

./: .gitignore  LICENSE  README.md
evdk_operators/: coding_and_compression.c  coding_and_compression.h  fonts.c  fonts.h  graphics_algorithms.c  graphics_algorithms.h  histogram_operations.c  histogram_operations.h  image.h  image_fundamentals.c  image_fundamentals.h  mensuration.c  mensuration.h  morphological_filters.c  morphological_filters.h  noise.c  noise.h  nonlinear_filters.c  nonlinear_filters.h  operators.h  segmentation.c  segmentation.h  spatial_filters.c  spatial_filters.h  spatial_frequency_filters.c  spatial_frequency_filters.h  transforms.c  transforms.h
evdk_workspace_apps/: evdk5_apps.code-workspace
evdk_workspace_apps/evdk5_histogram_webcam/: CMakeLists.txt  main.cpp
evdk_workspace_apps/evdk5_img_from_file/: CMakeLists.txt  main.cpp
evdk_workspace_apps/evdk5_unit_test/: CMakeLists.txt  main.c  main.h  test_coding_and_compression.c  test_coding_and_compression.h  test_graphics_algorithms.c  test_graphics_algorithms.h  test_histogram_operations.c  test_histogram_operations.h  test_image_fundamentals.c  test_image_fundamentals.h  test_mensuration.c  test_mensuration.h  test_morphological_filters.c  test_morphological_filters.h  test_nonlinear_filters.c  test_nonlinear_filters.h  test_segmentation.c  test_segmentation.h  test_spatial_filters.c  test_spatial_filters.h  test_spatial_frequency_filters.c  test_spatial_frequency_filters.h  test_transforms.c  test_transforms.h  unity_config.h
evdk_workspace_apps/evdk5_webcam/: CMakeLists.txt  main.cpp
evdk_workspace_targets/: evdk5_targets.code-workspace
evdk_workspace_targets/frdmmcxn947_evdk5_0/: .default_mex  CMakeLists.txt  CMakePresets.json  flags.cmake  frdmmcxn947_evdk5_0 JLink Debug.launch  frdmmcxn947_evdk5_0 JLink Release.launch  frdmmcxn947_evdk5_0.mex  frdmmcxn947_evdk5_0_Release.ld  mcux_include.json  script.jlink
evdk_workspace_targets/frdmmcxn947_evdk5_0/Debug/: frdmmcxn947_evdk5_0_Debug.ld  frdmmcxn947_evdk5_0_Debug_library.ld  frdmmcxn947_evdk5_0_Debug_memory.ld
evdk_workspace_targets/frdmmcxn947_evdk5_0/Release/: frdmmcxn947_evdk5_0_Release_library.ld  frdmmcxn947_evdk5_0_Release_memory.ld
evdk_workspace_targets/frdmmcxn947_evdk5_0/board/: board.c  clock_config.c  pin_mux.c  pin_mux.h
evdk_workspace_targets/frdmmcxn947_evdk5_0/doc/: readme.md
evdk_workspace_targets/frdmmcxn947_evdk5_0/drivers/: fsl_smartdma.c
evdk_workspace_targets/frdmmcxn947_evdk5_0/source/: bitmaps.c  bitmaps.h  clearuint8image_cm33.s  convertuyvytouint8_cm33.s  gpio_input.c  gpio_input.h  gpio_output.c  gpio_output.h  lpi2c3_controller_polling.c  lpi2c3_controller_polling.h  main.c  rotate180_cm33.s  ssd1306.c  ssd1306.h  usb_device_descriptor.c  usb_device_descriptor.h  uvc_camera.c  uvc_camera.h
